--- a/SpeedometerPlusMap.html
+++ b/SpeedometerPlusMap.html
@@ -11,7 +11,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Developed Not Downlaoded | Simple Speedometer and Map App</title>
-    <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
+    <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
+    <link rel="apple-touch-icon" href=“Images/weblogo180.png">
+    <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
