--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
-<!--<style>
-    body {
+<style>
+body {
         background: url(Images/DNDBKGTemplate2.png) repeat-x bottom;
     }
-</style>-->
-
+</style>
 <html>
 <head>
     <meta charset="utf-8" />
